// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyResults should render with custom title and subtitle 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-center h-full text-center bg-theme-background undefined"
    data-testid="EmptyResults"
  >
    <div>
      <div
        class="mb-4 text-lg font-bold"
      >
        No results
      </div>
      <div
        class="mb-8 text-md"
      >
        No results found. Refine your search and try again
      </div>
      <div
        class="mx-auto my-4 w-128"
      >
        <svg>
          no-results.svg
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyResults should render with no texts 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-center h-full text-center bg-theme-background undefined"
    data-testid="EmptyResults"
  >
    <div>
      <div
        class="mx-auto my-4 w-128"
      >
        <svg>
          no-results.svg
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
